--- a/votes/templates/votes/battleroyale.html
+++ b/votes/templates/votes/battleroyale.html
@@ -8,8 +8,113 @@
    Hello there, {{ firstname }}! Unfortunately, you may no longer participate in this activity. If you think this is a mistake, please click on the Contact Us tab. Thanks!
    <br>
 
-   {% if firstname == "Luca" %}
-   <p>Luca<p/>
+   {% if email == "lac@smmk12.org" %}
+   <p>Your initial target is: CORY GREWOHL<p/>
+   {% elif email == "gma@smmk12.org" %}
+   <p>Your initial target is: ELEANOR HAMMERSLY<p/>
+   {% elif email == "rca@smmk12.org" %}
+   <p>Your initial target is: ANNIE HUANG<p/>
+   {% elif email == "ima@smmk12.org" %}
+   <p>Your initial target is: TESS GODDARD<p/>
+   {% elif email == "jrb2@smmk12.org" %}
+   <p>Your initial target is: NICHOLAS FARIES<p/>
+   {% elif email == "abc2@smmk12.org" %}
+   <p>Your initial target is: VICTOR HERNANDEZ<p/>
+   {% elif email == "rwc@smmk12.org" %}
+   <p>Your initial target is: DEREK WEN<p/>
+   {% elif email == "lg@smmk12.org" %}
+   <p>Your initial target is: SAWYER KOETTERS<p/>
+   {% elif email == "mgd@smmk12.org" %}
+   <p>Your initial target is: SUSANNA WISE<p/>
+   {% elif email == "nbf@smmk12.org" %}
+   <p>Your initial target is: RILEY WALLACE<p/>
+   {% elif email == "ajf@smmk12.org" %}
+   <p>Your initial target is: CALEB KIM<p/>
+   {% elif email == "rcf@smmk12.org" %}
+   <p>Your initial target is: RYAN CHIEN<p/>
+   {% elif email == "lsg@smmk12.org" %}
+   <p>Your initial target is: JIANJIA GETTINGER<p/>
+   {% elif email == "jag4@smmk12.org" %}
+   <p>Your initial target is: DAVID ZHANG<p/>
+   {% elif email == "trg@smmk12.org" %}
+   <p>Your initial target is: JONATHAN MESHKANIAN<p/>
+   {% elif email == "cwg@smmk12.org" %}
+   <p>Your initial target is: DONOVAN SANDERS<p/>
+   {% elif email == "ech@smmk12.org" %}
+   <p>Your initial target is: LAUREN GAUDRY<p/>
+   {% elif email == "ash@smmk12.org" %}
+   <p>Your initial target is: EDWARD ZINNEMANN<p/>
+   {% elif email == "twj@smmk12.org" %}
+   <p>Your initial target is: ETHAN MULLANE<p/>
+   {% elif email == "bzk@smmk12.org" %}
+   <p>Your initial target is: AVERY KIRSCHBAUM<p/>
+   {% elif email == "jpk@smmk12.org" %}
+   <p>Your initial target is: CARMEN UGARTE<p/>
+   {% elif email == "chk@smmk12.org" %}
+   <p>Your initial target is: ELLA WARD<p/>
+   {% elif email == "kak@smmk12.org" %}
+   <p>Your initial target is: LUCAS GARCIA CORNEJO<p/>
+   {% elif email == "abk@smmk12.org" %}
+   <p>Your initial target is: MCKENNA DAVIS<p/>
+   {% elif email == "spk@smmk12.org" %}
+   <p>Your initial target is: JOHN SOLOMON<p/>
+   {% elif email == "sjk3@smmk12.org" %}
+   <p>Your initial target is: JOSEPH KEAN<p/>
+   {% elif email == "kak3@smmk12.org" %}
+   <p>Your initial target is: RILEY FURLONG<p/>
+   {% elif email == "cel@smmk12.org" %}
+   <p>Your initial target is: ARIANA MATTIOLI<p/>
+   {% elif email == "amm22@smmk12.org" %}
+   <p>Your initial target is: ARYA SHAPOURI<p/>
+   {% elif email == "mlm3@smmk12.org" %}
+   <p>Your initial target is: RACHEL ANDERSON<p/>
+   {% elif email == "jgm3@smmk12.org" %}
+   <p>Your initial target is: PATRICK TSENG<p/>
+   {% elif email == "eom@smmk12.org" %}
+   <p>Your initial target is: CHRISTOPHER WONG<p/>
+   {% elif email == "kar@smmk12.org" %}
+   <p>Your initial target is: KAIDEN KREPELA<p/>
+   {% elif email == "mjs@smmk12.org" %}
+   <p>Your initial target is: LUCA COTTER<p/>
+   {% elif email == "dms3@smmk12.org" %}
+   <p>Your initial target is: JOSEPH WICKLINE<p/>
+   {% elif email == "as3@smmk12.org" %}
+   <p>Your initial target is: GRACE ALEXANDER<p/>
+   {% elif email == "jts@smmk12.org" %}
+   <p>Your initial target is: JERAN BRUCE<p/>
+   {% elif email == "ivt@smmk12.org" %}
+   <p>Your initial target is: MICHAEL MELAKU<p/>
+   {% elif email == "pt@smmk12.org" %}
+   <p>Your initial target is: RUFUS BORDAL<p/>
+   {% elif email == "cvu@smmk12.org" %}
+   <p>Your initial target is: AUGUST FOUTS<p/>
+   {% elif email == "rlw@smmk12.org" %}
+   <p>Your initial target is: KATYA KIRKLAND<p/>
+   {% elif email == "emw@smmk12.org" %}
+   <p>Your initial target is: ISABELLE TRENTCHEV<p/>
+   {% elif email == "dhw@smmk12.org" %}
+   <p>Your initial target is: BENJAMIN KARNI<p/>
+   {% elif email == "jhw@smmk12.org" %}
+   <p>Your initial target is: ASHER CHASE<p/>
+   {% elif email == "sjw@smmk12.org" %}
+   <p>Your initial target is: TESSA JACKSON<p/>
+   {% elif email == "caw@smmk12.org" %}
+   <p>Your initial target is: ANDREW HU<p/>
+   {% elif email == "dz@smmk12.org" %}
+   <p>Your initial target is: KATIE RICHARDS<p/>
+   {% elif email == "eoz@smmk12.org" %}
+   <p>Your initial target is: ILA AMIRI<p/>
+   {% elif email == "rmb@smmk12.org" %}
+   <p>Your initial target is: SASHA KOROMZAYLIPMAN<p/>
+   {% elif email == "vh@smmk12.org" %}
+   <p>Your initial target is: ALEKSANDER WHEELER-QUINTANILLA<p/>
+   {% elif email == "aeh@smmk12.org" %}
+   <p>Your initial target is: MATTHEW SALERNO<p/>
+   {% elif email == "afw@smmk12.org" %}
+   <p>Your initial target is: CAROLINE LOMONACO<p/>
+   {% elif email == "luca.a.cotter@gmail.com" %}
+   <p>test<p/>
+
    {% endif %}
 
 
