--- a/votes/templates/votes/battleroyale.html
+++ b/votes/templates/votes/battleroyale.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block content %}
 <div class="container-fluid">
-   Hello there, {{ firstname }}! Unfortunately, you may no longer participate in this activity. If you think this is a mistake, please click on the Contact Us tab. Thanks!
+   <!-- Hello there, {{ firstname }}! Unfortunately, you may no longer participate in this activity. If you think this is a mistake, please click on the Contact Us tab. Thanks! -->
    <br>
 
    {% if email == "lac@smmk12.org" %}
@@ -112,8 +112,7 @@
    <p>Your initial target is: MATTHEW SALERNO<p/>
    {% elif email == "afw@smmk12.org" %}
    <p>Your initial target is: CAROLINE LOMONACO<p/>
-   {% elif email == "luca.a.cotter@gmail.com" %}
-   <p>test<p/>
+
 
    {% endif %}
 
