changed it so battleroyale goes to battleroyale.html

--- a/votes/templates/votes/index.html
+++ b/votes/templates/votes/index.html
@@ -20,8 +20,8 @@
                 </li>
              {% endfor %}
           </ul>
-             <span class="myfont-scaling-sm">If you don't see your school, please make sure you logged in with your school email address. For example: abc@smmk12.org. To do so, you may have to open a new private window or clear history.</span>
-             <span class="myfont-scaling-sm"><a href="harvardssp.html">Harvard SSP</a></span>
+          <a href="battleroyale.html">Click here to see your initial target!</a>
+          <span class="myfont-scaling-sm">If you don't see your school, please make sure you logged in with your school email address. For example: abc@smmk12.org. To do so, you may have to open a new private window or clear history.</span>
        {% else %}
         You are not authorized for any schools with the email address you used: {{ email }}. <br/>
 Please make sure that you have signed in with your school email. For example: abc@smmk12.org. To do so, you may have to open a new private window or clear history.
