changed it so battleroyale goes to battleroyale.html

--- a/votes/templates/votes/index.html
+++ b/votes/templates/votes/index.html
@@ -20,7 +20,8 @@
                 </li>
              {% endfor %}
           </ul>
-          <a href="battleroyale.html">Click here to see your initial target!</a>
+          <a href="battleroyale">Click here to see your initial target!</a>
+          <br>
           <span class="myfont-scaling-sm">If you don't see your school, please make sure you logged in with your school email address. For example: abc@smmk12.org. To do so, you may have to open a new private window or clear history.</span>
        {% else %}
         You are not authorized for any schools with the email address you used: {{ email }}. <br/>
